--- a/Aula5/Estoque/Views/Produto/Form.cshtml
+++ b/Aula5/Estoque/Views/Produto/Form.cshtml
@@ -12,26 +12,27 @@
 <body>
     <form action="/Produto/Adiciona" method="post">
         @Html.ValidationMessage("produto.informaticaComPrecoInvalido")
+       
         <label for="nome"> Nome: </label>
-        <input id="nome" name="produto.nome" />
+        <input id="nome" name="produto.nome" value="@ViewBag.Produto.Nome"/>
         @Html.ValidationMessage("produto.Nome")
 
         <label for="preco"> Preço: </label>
-        <input id="preco" name="produto.preco" />
-        @Html.ValidationMessage("produto.Preco")
+        <input id="preco" name="produto.preco" value="@ViewBag.Produto.Preco"/>
+                @Html.ValidationMessage("produto.Preco")
 
 
 
 
         <label for="quantidade"> Quantidade: </label>
-        <input id="quantidade" name="produto.quantidade" />
+        <input id="quantidade" name="produto.quantidade" value="@ViewBag.Produto.Quantidade" />
         @Html.ValidationMessage("produto.Quantidade")
 
 
 
 
         <label for="descricao"> Descrição: </label>
-        <input id="descricao" name="produto.descricao" />
+        <input id="descricao" name="produto.descricao" value="@ViewBag.Produto.Descricao"/> />
         @Html.ValidationMessage("produto.Descricao")
 
 
