Adicionado o campo de BL como chave estrangeira de container

--- a/BLContainer_TP02/BLContainer_TP02/Views/Shared/_Layout.cshtml
+++ b/BLContainer_TP02/BLContainer_TP02/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 @Html.ActionLink("Terminal", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-                @Html.ActionLink("Containers", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Containers", "Index", "Container", new { area = "" }, new { @class = "navbar-brand" })
 
                 @Html.ActionLink("BLs", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
 
