--- a/BLContainer_TP02/BLContainer_TP02/Views/Container/Index.cshtml
+++ b/BLContainer_TP02/BLContainer_TP02/Views/Container/Index.cshtml
@@ -18,18 +18,18 @@
     <table>
         <thead>
             <tr>
-                <th>Número</th>
-                <th>Tipo</th>
-                <th>Tamanho</th>
+                <th >Número</th>
+                <th colspan="2">Tipo</th>
+                <th >Tamanho</th>
             </tr>
         </thead>
         <tbody>
             @foreach (var container in ViewBag.Containers)
             {
                 <tr>
-                    <td>@container.Numero</td>
-                    <td>@container.Tipo</td>
-                    <td>@container.Tamanho</td>
+                    <td align="center">@container.Numero</td>
+                    <td colspan="2" align="center">@container.Tipo</td>
+                    <td align="center">@container.Tamanho</td>
                 </tr>
             }
         </tbody>
