--- a/BLContainer_TP02/BLContainer_TP02/Views/Shared/_Layout.cshtml
+++ b/BLContainer_TP02/BLContainer_TP02/Views/Shared/_Layout.cshtml
@@ -19,8 +19,7 @@
                 </button>
                 @Html.ActionLink("Terminal", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
                 @Html.ActionLink("Containers", "Index", "Container", new { area = "" }, new { @class = "navbar-brand" })
-
-                @Html.ActionLink("BLs", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("BLs", "Index", "BL", new { area = "" }, new { @class = "navbar-brand" })
 
             </div>
             <div class="navbar-collapse collapse">
