Mudado o botão novo para tag "<a>"

--- a/BLContainer_TP02/BLContainer_TP02/Views/Container/Index.cshtml
+++ b/BLContainer_TP02/BLContainer_TP02/Views/Container/Index.cshtml
@@ -12,7 +12,10 @@
 </head>
 <body> 
     <h2>Lista de Container</h2>
-    <button class="btn-default" >Novo</button>
+    <input type="submit" class="btn-default" onclick="redirecionar"value="Novo"/>
+    <a class="btn btn-primary" href="@Url.Action("Form", "ContainerController")">
+        Novo
+    </a>
     <br/>
     <table class="table table-striped">
         <thead>
