--- a/BLContainer_TP02/BLContainer_TP02/Views/Container/Index.cshtml
+++ b/BLContainer_TP02/BLContainer_TP02/Views/Container/Index.cshtml
@@ -37,7 +37,7 @@
                     <td >@container.Numero</td>
                     <td >@container.Tipo</td>
                     <td >@container.Tamanho</td>
-                    <td><a href="BL/${container.BLid.Id}">@container.BLId.Id</a></td>
+                    <td><a href="BL/${container.Bl.Id}">@container.Bl.Id</a></td>
                     <td><button class="btn-danger"><span class="glyphicon glyphicon-remove"></span></button></td>
                 </tr>
             }   .
