Trocado buttons por <a>

--- a/BLContainer_TP02/BLContainer_TP02/Views/BL/Index.cshtml
+++ b/BLContainer_TP02/BLContainer_TP02/Views/BL/Index.cshtml
@@ -30,12 +30,12 @@
                 {
                     <tr>
                         <td>
-                            <button class="btn-default"><span class="glyphicon glyphicon-edit"></span></button>
+                            <a class="btn-default"><span class="glyphicon glyphicon-edit"></span></a>
                         </td>
                         <td>@bl.Id</td>
                         <td>@bl.Consignee</td>
                         <td>@bl.Navio</td>
-                        <td><button class="btn-danger"><span class="glyphicon glyphicon-remove"></span></button></td>
+                        <td><a class="btn-danger"><span class="glyphicon glyphicon-remove"></span></a></td>
                     </tr>
                 }
             </tbody>
