--- a/BLContainer_TP02/BLContainer_TP02/Views/Container/Index.cshtml
+++ b/BLContainer_TP02/BLContainer_TP02/Views/Container/Index.cshtml
@@ -32,13 +32,13 @@
             {
                 <tr>
                     <td>
-                        <button class="btn-default"><span class="glyphicon glyphicon-edit"></span></button>
+                        <a class="btn-default"><span class="glyphicon glyphicon-edit"></span></a>
                     </td>
                     <td >@container.Numero</td>
                     <td >@container.Tipo</td>
                     <td >@container.Tamanho</td>
                     <td><a href="BL/${container.Bl.Id}">@container.Bl.Id</a></td>
-                    <td><button class="btn-danger"><span class="glyphicon glyphicon-remove"></span></button></td>
+                    <td><a class="btn-danger"><span class="glyphicon glyphicon-remove"></span></a></td>
                 </tr>
             }   .
 
