--- a/BLContainer_TP02/BLContainer_TP02/Views/BL/Index.cshtml
+++ b/BLContainer_TP02/BLContainer_TP02/Views/BL/Index.cshtml
@@ -32,7 +32,7 @@
                         <td>
                             <a class="btn-default"><span class="glyphicon glyphicon-edit"></span></a>
                         </td>
-                        <td>@bl.Id</td>
+                        <td>@bl.Numero</td>
                         <td>@bl.Consignee</td>
                         <td>@bl.Navio</td>
                         <td><a class="btn-danger"><span class="glyphicon glyphicon-remove"></span></a></td>
