--- a/BLContainer_TP02/BLContainer_TP02/Views/Container/Index.cshtml
+++ b/BLContainer_TP02/BLContainer_TP02/Views/Container/Index.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model IList<BLContainer_TP02.Models.Container>
+
 @{
     ViewBag.Title = "Index";
 }
@@ -28,7 +29,7 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var container in ViewBag.Containers)
+            @foreach (var container in Model)
             {
                 <tr>
                     <td>
@@ -37,8 +38,8 @@
                     <td >@container.Numero</td>
                     <td >@container.Tipo</td>
                     <td >@container.Tamanho</td>
-                    <td><a href="BL/${container.Bl.Id}">@container.Bl.Id</a></td>
-                    <td><a class="btn-danger"><span class="glyphicon glyphicon-remove"></span></a></td>
+                    <td>@Html.ActionLink(container.Bl.Numero, "BLContainer",new { id = container.Bl.Id })</td>
+                    <td><a href="@Url.Action()" class="btn-danger"><span class="glyphicon glyphicon-remove"></span></a></td>
                 </tr>
             }   .
 
