--- a/BLContainer_TP02/BLContainer_TP02/Views/Container/Form.cshtml
+++ b/BLContainer_TP02/BLContainer_TP02/Views/Container/Form.cshtml
@@ -26,12 +26,14 @@
 
         <label for="BL"> BL: </label>
         <select id="BL" name="Container.BLId">
-
-            @foreach (var bl in ViewBag.BLs)
+            @if (ViewBag.BLs != null)
             {
-
-                <option value="@bl.Id" selected="(@bl.Id.Equals(ViewBag.Container.BLId)">@bl.Numero</option>
+                foreach (var bl in ViewBag.BLs)
+                {
+                    <option value="@bl.Id" selected="(@bl.Id.Equals(ViewBag.Container.BLId)">@bl.Numero</option>
+                }
             }
+          
         </select>
         <input type="submit" />
     </form>
