--- a/BLContainer_TP02/BLContainer_TP02/Views/Container/Index.cshtml
+++ b/BLContainer_TP02/BLContainer_TP02/Views/Container/Index.cshtml
@@ -39,10 +39,8 @@
                     <td>@container.Tipo</td>
                     <td>@container.Tamanho</td>
                     <td>@Html.ActionLink(container.Bl.Numero, "BLContainer", new { id = container.Bl.Id })</td>
-                    <td><@Html.RouteLink("","ApagarContainer", { new id})<span class="glyphicon glyphicon-remove"></span></a></td>
-
-                   class="btn-danger"
-                </ tr >
+                    <td> @Html.RouteLink("X","ApagarContainer", new{id = container.Id, @class="btn-danger"}) <span class="glyphicon glyphicon-remove"></span></td>
+                </tr>
                 } 
        </tbody>
     </table>
