Ta dando BlackOut

--- a/BLContainer_TP02/BLContainer_TP02/Views/BL/Form.cshtml
+++ b/BLContainer_TP02/BLContainer_TP02/Views/BL/Form.cshtml
@@ -3,9 +3,7 @@
     ViewBag.Title = "Form";
 }
 
-<h2>Form</h2>
-
-
+<h2>Novo BL</h2>
 <!DOCTYPE html>
 
 <html>
@@ -14,27 +12,18 @@
     <title></title>
 </head>
 <body>
-    <h2>Novo BL</h2>
+        <form action="/BL/Adiciona" method="post">
+            <label for="numero"> Número: </label>
+            <input id="numero" name="BL.Numero" value="@ViewBag.BL.Numero" />
 
-    <form action="/BL/Adiciona" method="post">
+            <label for="consignee"> Consignee: </label>
+            <input id="consignee" name="BL.Consignee" value="@ViewBag.BL.Consignee" />
 
+            <label for="Navio"> Navio: </label>
+            <input id="Navio" name="BL.Navio" value="@ViewBag.BL.Navio" />
 
-        <label for="numero"> Número: </label>
-        <input id="numero" name="BL.Numero" value="@ViewBag.BL.Numero" />
-
-        <label for="consignee"> Consignee: </label>
-        <input id="consignee" name="BL.Consignee" value="@ViewBag.BL.Consignee" />
-
-        <label for="navio"> Navio: </label>
-        <input id="navio" name="BL.Navio" value="@ViewBag.BL.Navio" />
-
-        <input type="submit" />
-    </form>
+           
+             <input type="submit" />
+        </form>
 </body>
 </html>
-
-
-
-
-
-
