--- a/BLContainer_TP02/BLContainer_TP02/Views/BL/Form.cshtml
+++ b/BLContainer_TP02/BLContainer_TP02/Views/BL/Form.cshtml
@@ -12,18 +12,27 @@
     <title></title>
 </head>
 <body>
-        <form action="/BL/Adiciona" method="post">
+    <form action="/BL/Adiciona" method="post">
+        @if (ViewBag.BL.Numero == null)
+        {
             <label for="numero"> Número: </label>
-            <input id="numero" name="BL.Numero" value="@ViewBag.BL.Numero" />
+            <input class="form-control" id="numero" name="BL.Numero" value="@ViewBag.BL.Numero" />
+        }
+        else
+        {
+            <label for="numero"> Número: </label>
+            <input class="form-control" id="numero" name="BL.Numero" value="@ViewBag.BL.Numero" readonly/>
+        }
 
-            <label for="consignee"> Consignee: </label>
-            <input id="consignee" name="BL.Consignee" value="@ViewBag.BL.Consignee" />
 
-            <label for="Navio"> Navio: </label>
-            <input id="Navio" name="BL.Navio" value="@ViewBag.BL.Navio" />
+        <label for="consignee"> Consignee: </label>
+        <input class="form-control" id="consignee" name="BL.Consignee" value="@ViewBag.BL.Consignee" />
 
-           
-             <input type="submit" />
-        </form>
+        <label for="Navio"> Navio: </label>
+        <input class="form-control" id="Navio" name="BL.Navio" value="@ViewBag.BL.Navio" />
+
+        <br />
+        <input class="btn-success" type="submit" />
+    </form>
 </body>
 </html>
